[package]
name = "async-bb8-diesel"
description = "async bb8 connection manager for Diesel"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxidecomputer/async-bb8-diesel"
keywords = ["diesel", "r2d2", "pool", "tokio", "async"]

[dependencies]
bb8 = "0.8"
async-trait = "0.1.56"
diesel = { version = "2.0.0", default-features = false, features = [ "r2d2" ] }
thiserror = "1.0"
actix-rt = "2.7.0"

[dev-dependencies]
diesel = { version = "2.0.0", features = [ "postgres", "r2d2" ] }
actix-rt = "2.7.0"
